force-app/main/default/objects/OS_Property__c/fields/Property_Approver__c.field-meta.xml
<CustomField>
    <fullName>Property_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PropertyApprover</relationshipName>
    <type>Lookup</type>
</CustomField>