force-app/main/default/objects/OS_Property__c/fields/Reason_for_Block__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Block__c</fullName>
    <label>Reason for Block</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Block by Developer</fullName>
            </value>
            <value>
                <fullName>Block by Lux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>