force-app/main/default/objects/OS_Property__c/fields/Related_project__c.field-meta.xml
<CustomField>
    <fullName>Related_project__c</fullName>
    <label>Related project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East Tower, 1 Residences</fullName>
            </value>
            <value>
                <fullName>West Tower, 1 Residences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>