force-app/main/default/objects/OS_Property__c/fields/Request_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for Approval</label>
    <type>Checkbox</type>
</CustomField>