force-app/main/default/objects/OS_Property__c/fields/Total_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_Sq_Ft__c</fullName>
    <formula>os_Total_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Area Sq.Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>