force-app/main/default/objects/OS_Property__c/fields/Total_Area_Sq_mtr__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_Sq_mtr__c</fullName>
    <formula>os_Total_Area__c  * 0.092903</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Area Sq.mtr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>